# diagrams

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING-SETUPGUIDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  all_node_types.py  architecture.py  autogen.sh  config.py  diagram-c0af1cf  diagram-e5a94d3  diagram-eaf0ab7  diagram-ecb3d63  diagram-efecb5c  diagram-f276bc0  diagram-f5717ea  diagrams_image  example_1  file1.py  file2.py  ibm_diagrams.py  index.html  mkdocs.yml  my_custom_name  pyproject.toml  requirements.txt  sitemap.xml  tech-byte-diagram.py  test  test_agentcore_icons.py  test_nova_icons.py  test_resources_render
.buildkite/: pipeline.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: boring-cyborg.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  lint_python.yml  pre-commit.yml  publish.yml  test.yml
app-deployment/: container-deployment.tf
azure-container-web-application/: main.tf
css/: main.css
diagrams/: __init__.py  cli.py  cluster.py  context.py  diagram.py  edge.py  node.py  utils.py
diagrams/.buildkite/: pipeline.yml
diagrams/aci/: fabricnode.py  logical.py
diagrams/alibabacloud/: __init__.py  alibabacloud.py  database.py
diagrams/aws/: __init__.py  analytics.py  ar.py  aws.py  blockchain.py  business.py  cluster.py  compute.py  cost.py  database.py  devtools.py  enablement.py  enduser.py  engagement.py  game.py  general.py  integration.py  iot.py  management.py  media.py  migration.py  ml.py  mobile.py  network.py  quantum.py  robotics.py  satellite.py  security.py  storage.py
diagrams/azure/: __init__.py  ai_machine_learning.py  ai_ml.py  aimachinelearning.py  analytics.py  app_services.py  application.py  appservices.py  azure.py  azure_ecosystem.py  azure_stack.py  azure_vmware.py  azure_vmware_solution.py  azureecosystem.py  azurestack.py  blockchain.py  cluster.py  compute.py  containers.py  data.py  database.py  databases.py  deployment.py  devops.py  dynamics365.py  ecosystem.py  endpoint.py  (+30 more)
docker/: docker-compose.yml
docs/: cheat-sheet.md  cluster.html  diagram.html  diagram.md  examples.html  examples.md  index.md  installation.html  installation.md  node.html  node.md
en/: index.html
examples/: aws.py  azure.py  dociq.py
mcp-server/: Dockerfile  GEMINI.md  README.md  requirements.txt
mydiagrams/: GroupedWorkersonAWS.py
scripts/: __init__.py  cheat_sheet.py  generate.py  resource.py
templates/: apidoc.tmpl  apidoc_custom.tmpl  module.tmpl
tests/: test_aws_ml_icons.py  test_c4.py  test_camunda.py  test_cli.py  test_diagram.py  test_provider.py
website/: deploy.sh  package-lock.json  package.json  publish.sh  sidebars.json  siteConfig.js
(+396 files in other folders)
